# sylvan-benchmarks

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  build_dmc.sh  requirements.txt  run_aiger_synth.sh  run_all.sh  run_benchmarks.sh  run_cmp_hashmap.sh  run_dpmc.sh  run_storm.sh
build-cmake/: CMakeCache.txt  Makefile  cmake_install.cmake
build-cmake/cmp_hashmap/: Makefile  cmake_install.cmake  cmp_hashmap
build-cmake/cmp_sylvancudd/: Makefile  cmake_install.cmake
build-cmake/cudd/: Makefile  cmake_install.cmake
build-cmake/cudd/cudd/: Makefile  cmake_install.cmake
build-cmake/cudd/dddmp/: Makefile  cmake_install.cmake
build-cmake/cudd/epd/: Makefile  cmake_install.cmake
build-cmake/cudd/mtr/: Makefile  cmake_install.cmake
build-cmake/cudd/st/: Makefile  cmake_install.cmake
build-cmake/cudd/util/: Makefile  cmake_install.cmake
build-cmake/hashmap_cmp/: Makefile  cmake_install.cmake
build-cmake/safety_synthesis/: Makefile  aiger_synt  cmake_install.cmake
build-cmake/sylvan/: Makefile  cmake_install.cmake
build-cmake/sylvan/src/: Makefile  cmake_install.cmake
build-cmake/sylvancudd_cmp/: Makefile  cmake_install.cmake
cmp_hashmap/: CMakeLists.txt  aigsynt  cmp_hashmap.c  cmp_hashmap.py  cmp_hashmap.sh
cmp_hashmap/old/: hashmap_cmp_w1.pgf  hashmap_cmp_w2.pgf  hashmap_cmp_w3.pgf  hashmap_cmp_w4.pgf  w1_chaining.csv  w1_probing.csv  w2_chaining.csv  w2_probing.csv  w3_chaining.csv  w3_probing.csv  w4_chaining.csv  w4_probing.csv
cmp_sylvancudd/: CMakeLists.txt  README.md  aag.h  aiger_sylvan_cudd.cpp  cmp_sylvancudd.c  cmp_sylvancudd.py  cudd_bdd.dot  dot_to_png.sh  helper_cudd.h  helper_sylvan.h  sylvan_bdd.dot
cmp_sylvancudd/example_bdd/: cudd_bdd_not_optimal.dot  cudd_bdd_not_optimal_reordered.dot  cudd_bdd_not_optimal_reordered_2.dot  cudd_bdd_optimal.dot  cudd_bdd_optimal_reordered.dot  dot_to_png.sh  sylvan_bdd_not_optimal.dot  sylvan_bdd_not_optimal_reordered.dot  sylvan_bdd_not_optimal_reordered_2.dot  sylvan_bdd_optimal.dot  sylvan_bdd_optimal_reordered.dot
debug-clang/: CMakeCache.txt  Makefile  cmake_install.cmake
debug-clang/cmp_hashmap/: Makefile  cmake_install.cmake  cmp_hashmap
debug-clang/cmp_sylvancudd/: Makefile  cmake_install.cmake  cmp_sylvancudd
debug-clang/safety_synthesis/: Makefile  aiger_synt
debug-gcc/: CMakeCache.txt  Makefile  cmake_install.cmake
debug-gcc/cmp_hashmap/: Makefile
debug-gcc/cmp_sylvancudd/: Makefile  cmp_sylvancudd
debug-gcc/safety_synthesis/: Makefile  cmake_install.cmake
hashmap_cmp/: CMakeLists.txt  README.md  hashmap_cmp.c  hashmap_cmp.sh  main.py
hashmap_cmp/data/: w1_chaining.csv  w1_probing_limited.csv  w1_probing_unlimited.csv  w2_chaining.csv  w2_probing_limited.csv  w2_probing_unlimited.csv  w3_chaining.csv  w3_probing_limited.csv  w3_probing_unlimited.csv  w4_chaining.csv  w4_probing_limited.csv  w4_probing_unlimited.csv
safety_synthesis/: CMakeLists.txt  README.md  aag.h  aiger_synt.cpp
safety_synthesis/models/toy_examples/: default.profraw  hyperfine_1.17.0_i686.deb
scripts/: build_dmc.sh  build_safety_synth.sh  run_all.sh  run_cmp_hashmap.sh  run_dpmc.sh  run_safety_synth.sh  run_storm.sh  test_cudd_dpmc.sh  test_sylvan_dmc.sh  test_sylvan_dpmc.sh
simplebddsolver/: CHANGELOG.md  LICENSE  simplebddsolver.cabal
simplebddsolver/app/: Main.hs
simplebddsolver/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
simplebddsolver/dist-newstyle/packagedb/ghc-9.4.4/: package.cache  simplebddsolver-0.1.0.0-inplace.conf
simplebddsolver/src/: BDD.hs  Solver.hs
sylvancudd_cmp/: CMakeLists.txt  helper_sylvan.h  sylvancudd_cmp.c  sylvancudd_cmp.py
syntcomp/: Main.hs  MainCudd.hs  MainSylvan.hs  README.md  build.sh  build_slurm.sh  cudd-solver  makefile  plot_penchmark.py  run.sh  simplebddsolver.cabal  solver.cabal  sylvan-solver  sylvan_regression.sh  sylvan_vs_cudd.json  sylvan_vs_cudd.sh  sylvan_vs_cudd_slurm.sh
syntcomp/.config/cabal/: config
syntcomp/plotting-scripts/: sylvan_vs_cudd.json
syntcomp/src/: AAG.hs  BDD.hs  BDDCudd.hs  BDDSylvan.hs  CuddSolver.hs  Solver.hs  SylvanSolver.hs  SylvanSolver2.hs
syntcomp/src/Cudd/: Reorder.chs
syntcomp/src/Cudd/c_sources/: cuddwrap.c
syntcomp/src/Sylvan/: Sylvan.hs
syntcomp/src/Sylvan/c_sources/: stubs.c
syntcomp/src/cudd/: MTR.chs
syntcomp/src/sylvan/: Sylvan.hs
syntcomp/src/sylvan/c_sources/: stubs.c
syntcomp/tests/: analysis.ipynb  analysis.r  auto_runtime_mult.tex  generate_plots.py  generate_tables.py  sylvan_cudd.sbatch  sylvan_cudd.sh  sylvan_cudd_analysis.ipynb  sylvan_cudd_tables.py  sylvan_regression.sbatch  sylvan_regression.sh  sylvan_regression_analysis.ipynb  sylvan_regression_slurm.sh  sylvan_regression_tables.py  sylvan_vs_cudd.sh  test.sh  test_slurm.sh  txt_to_csv.py
syntcomp/tests/.ipynb_checkpoints/: analysis-checkpoint.ipynb
syntcomp/tests/results/: auto_quality_benchmarks.csv  auto_runtime_benchmarks.csv  generate_csv_tables.py  manu_quality_benchmarks.csv  manu_runtime_benchmarks.csv  sylvan_cudd_runtime.csv  sylvan_regression_max_growth.csv  sylvan_regression_nodes_threshold.csv  sylvan_regression_quality_max_growth.csv  sylvan_regression_quality_nodes_threshold.csv  sylvan_regression_workers.csv
syntcomp/tests/results/auto/: add10y.csv  add10y.md  add12y.csv  add12y.md  add14y.csv  add14y.md  add16y.csv  add16y.md  add18y.csv  add18y.md  add20y.csv  add20y.md  add24y.csv  add24y.md  add28y.csv  add28y.md  cudd-group-auto-solver_add10y.csv  cudd-group-auto-solver_add10y.txt  cudd-group-auto-solver_add12y.csv  cudd-group-auto-solver_add12y.txt  cudd-group-auto-solver_add14y.csv  cudd-group-auto-solver_add14y.txt  cudd-group-auto-solver_add16y.csv  cudd-group-auto-solver_add16y.txt  cudd-group-auto-solver_add18y.csv  cudd-group-auto-solver_add18y.txt  cudd-group-auto-solver_add20y.csv  cudd-group-auto-solver_add20y.txt  cudd-group-auto-solver_add24y.csv  cudd-group-auto-solver_add24y.txt  (+57 more)
syntcomp/tests/slurm/: sylvan_cudd.sbatch  sylvan_cudd.sh  sylvan_regression.sbatch  sylvan_regression.sh
(+14035 files in other folders)
