macro(add_benchmark NAME SOURCE)
    add_executable(${NAME} ${SOURCE})
    set_target_properties(${NAME} PROPERTIES COMPILE_OPTIONS "-Wno-unused")
    target_include_directories(${NAME} PRIVATE ${CMAKE_CURRENT_LIST_DIR})
    target_link_libraries(${NAME} PRIVATE sylvan::sylvan)
    target_compile_features(${NAME} PRIVATE c_std_11 cxx_std_11)
    target_compile_options(${NAME} PRIVATE -Wall -Wextra -Werror -Wno-deprecated)
    target_compile_options(${NAME} PRIVATE -Wno-unused-parameter)
endmacro(add_benchmark)

add_benchmark(cmp_hashmap cmp_hashmap.c)

option(SYLVAN_USE_LINEAR_PROBING "Unique table uses linear probing instead of chaining" OFF)
if(SYLVAN_USE_LINEAR_PROBING)
    set_target_properties(cmp_hashmap PROPERTIES COMPILE_DEFINITIONS "SYLVAN_USE_LINEAR_PROBING")
    set_target_properties(sylvan PROPERTIES COMPILE_DEFINITIONS "SYLVAN_USE_LINEAR_PROBING")
endif ()